tests/integration/snapshots/integration__conformance__n_number_0.1.2.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[0.1.2]
stdout ---

stderr ---
error: unexpected character `.`. expected start of a json value
 --> stdin:1:5
  |
1 | [0.1.2]
  |     ^
